force-app/main/default/objects/RW_Digital_Link_Status__c/RW_Digital_Link_Status__c.object-meta.xml
<CustomObject>
    <label>Digital Link Status</label>
    <nameField>
        <displayFormat>DL-{0000000}</displayFormat>
        <label>Digital Link Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Link Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>