force-app/main/default/objects/RW_Digital_Link_Status__c/fields/RW_Link_Expiry_Time__c.field-meta.xml
<CustomField>
    <fullName>RW_Link_Expiry_Time__c</fullName>
    <label>Link Expiry Time</label>
    <type>DateTime</type>
</CustomField>