force-app/main/default/objects/RW_Digital_Link_Status__c/fields/RW_Link_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Link_Status__c</fullName>
    <label>Link Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>