force-app/main/default/objects/RW_Digital_Link_Status__c/fields/RW_Link_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Link_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Type</label>
    <type>Text</type>
</CustomField>