force-app/main/default/objects/RW_Digital_Link_Status__c/fields/RW_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>RW_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Digital Link Status</relationshipLabel>
    <relationshipName>Digital_Link_Status</relationshipName>
    <type>Lookup</type>
</CustomField>