force-app/main/default/objects/RW_Digital_Link_Status__c/recordTypes/Digital_Booking_Payment.recordType-meta.xml
<RecordType>
    <fullName>Digital_Booking_Payment</fullName>
    <active>true</active>
    <label>Digital Booking Payment</label>
</RecordType>