force-app/main/default/objects/RW_Digital_Link_Status__c/recordTypes/Digital_EOI_Payment.recordType-meta.xml
<RecordType>
    <fullName>Digital_EOI_Payment</fullName>
    <active>true</active>
    <label>Digital EOI Payment</label>
</RecordType>